[tool.poetry]
name = "github-issues"
version = "0.1.0"
description = ""
authors = ["Luke Kuzmish <lakuzmish@gmail.com>"]
readme = "README.md"
packages = [{include = "github_issues"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
